--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test menu</title>
+  <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <body>
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button>Menu</button>
+    <button>aria-controls="mainNav"Menu</button>
     <h1>Test de menu</h1>
+    <nav id="mainNav">
+      <ul>
+        <li><a href="#">item a</a></li>
+        <li><a href="#">item b</a></li>
+        <li><a href="#">item c</a></li>
+      </ul>
+    </nav>
   </header>
   <!-- h2>lorem2^p>lorem -->
   <h2>Lorem, ipsum.</h2>
