--- a/index.html
+++ b/index.html
@@ -45,58 +45,72 @@
     </nav>
     <h1>Animaux de compagnie</h1>
   </header>
-  <h2>Introduction</h2>
-  <p>
-    Bienvenue à tous. Ceci est une page dédiée à nos meilleurs amis les animaux de compagnie, principalement les chats
-    et les chiens.
-  </p>
 
-  <button aria-controls="petitmenu" @click="pM = ! pM">
-    Liste des pages</button>
-  <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+  <main>
+    <h2>Accueil</h2>
+    <p>
+      Bienvenue à tous. Ceci est une page dédiée à nos meilleurs amis les animaux de compagnie, principalement les chats
+      et les chiens.
+    </p>
 
-    <button aria-controls="sousmenuchat" @click="pSC = ! pSC">
-      Chats</button>
-    <div id="sousmenuchat" x-show="pSC" x-transition.duration.800ms><a href="/cats/index.html"><img
-          src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
+    <button aria-controls="petitmenu" @click="pM = ! pM">
+      Liste des pages</button>
+    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
 
-      <dl x-data="{P1:false}">
-        <dt aria-controls="Nav1" @click="P1 = ! P1"><button>Chats noirs</button></dt>
-        <dd id="Nav1" x-show="P1" x-transition.duration.800ms>Ce lien amène à la page consacré aux chats noirs :</dd>
-        <dd id="Nav1" x-show="P1" x-transition.duration.800ms><a href="/cats/blackcats.html"><img
-              src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
-      </dl>
-      <dl x-data="{P2:false}">
-        <dt aria-controls="Nav2" @click="P2 = ! P2"><button>Autres chats</button></dt>
-        <dd id="Nav2" x-show="P2" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chats :
-        </dd>
-        <dd id="Nav2" x-show="P2" x-transition.duration.800ms><a href="/cats/colorcats.html"><img
-              src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
-      </dl>
+      <button aria-controls="sousmenuchat" @click="pSC = ! pSC">
+        Chats</button>
+      <div id="sousmenuchat" x-show="pSC" x-transition.duration.800ms><a href="/cats/index.html"><img
+            src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
+
+        <dl x-data="{P1:false}">
+          <dt aria-controls="Nav1" @click="P1 = ! P1"><button>Chats noirs</button></dt>
+          <dd id="Nav1" x-show="P1" x-transition.duration.800ms>Ce lien amène à la page consacré aux chats noirs :</dd>
+          <dd id="Nav1" x-show="P1" x-transition.duration.800ms><a href="/cats/blackcats.html"><img
+                src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
+        </dl>
+        <dl x-data="{P2:false}">
+          <dt aria-controls="Nav2" @click="P2 = ! P2"><button>Autres chats</button></dt>
+          <dd id="Nav2" x-show="P2" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chats :
+          </dd>
+          <dd id="Nav2" x-show="P2" x-transition.duration.800ms><a href="/cats/colorcats.html"><img
+                src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
+        </dl>
+      </div>
+
+      <button aria-controls="sousmenuchien" @click="pSD = ! pSD">
+        Chiens</button>
+      <div id="sousmenuchien" x-show="pSD" x-transition.duration.800ms><a href="/dogs/index.html"><img
+            src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
+
+        <dl x-data="{P3:false}">
+          <dt aria-controls="Nav3" @click="P3 = ! P3"><button>Golden retriever</button></dt>
+          <dd id="Nav3" x-show="P3" x-transition.duration.800ms>Ce lien amène à la page consacré aux Golden retriever :
+          </dd>
+          <dd id="Nav3" x-show="P3" x-transition.duration.800ms><a href="/dogs/goldenretriever.html"><img
+                src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
+        </dl>
+        </dl>
+        <dl x-data="{P4:false}">
+          <dt aria-controls="Nav4" @click="P4 = ! P4"><button>Autres chiens</button></dt>
+          <dd id="Nav4" x-show="P4" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chiens :
+          </dd>
+          <dd id="Nav4" x-show="P4" x-transition.duration.800ms><a href="/dogs/colordogs.html"><img
+                src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
+        </dl>
+      </div>
+
     </div>
+    <h3>Petite galerie</h3>
+    <section>
+      <p>Vous allez voir, « Ils sont comme chien et chat ! »</p>
+      <img src="/public/img/chien-golden-retriever-chat-tigre-dorment-paisiblement-ia-generative_864588-2713.jpg"
+        alt="pets 1">
+      <img src="/public/img/collage-animal-mignon-isole.jpg" alt="pets 2" width=27.8% height=27.8%>
+      <img src="/public/img/beau-portrait-animal-familier-petit-chien-chat.jpg" alt="pets 3" width=40% height=40%>
+    </section>
 
-    <button aria-controls="sousmenuchien" @click="pSD = ! pSD">
-      Chiens</button>
-    <div id="sousmenuchien" x-show="pSD" x-transition.duration.800ms><a href="/dogs/index.html"><img
-          src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
-
-      <dl x-data="{P3:false}">
-        <dt aria-controls="Nav3" @click="P3 = ! P3"><button>Golden retriever</button></dt>
-        <dd id="Nav3" x-show="P3" x-transition.duration.800ms>Ce lien amène à la page consacré aux Golden retriever :
-        </dd>
-        <dd id="Nav3" x-show="P3" x-transition.duration.800ms><a href="/dogs/goldenretriever.html"><img
-              src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
-      </dl>
-      </dl>
-      <dl x-data="{P4:false}">
-        <dt aria-controls="Nav4" @click="P4 = ! P4"><button>Autres chiens</button></dt>
-        <dd id="Nav4" x-show="P4" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chiens :</dd>
-        <dd id="Nav4" x-show="P4" x-transition.duration.800ms><a href="/dogs/colordogs.html"><img
-              src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
-      </dl>
-    </div>
-
-  </div>
+  </main>
 </body>
+
 
 </html>
