--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <header>
-    <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn">
+    <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn" style="background-color:#ff7979 ; border-color:#000000">
       Menu
     </button>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
@@ -43,33 +43,33 @@
               alt="flèche lien"></a></a></li>
       </ul>
     </nav>
-    <h1>Animaux de compagnie</h1>
   </header>
 
   <main>
+    <h1>Animaux de compagnie</h1>
     <h2>Accueil</h2>
     <p>
       Bienvenue à tous. Ceci est une page dédiée à nos meilleurs amis les animaux de compagnie, principalement les chats
       et les chiens.
     </p>
 
-    <button aria-controls="petitmenu" @click="pM = ! pM">
+    <button aria-controls="petitmenu" @click="pM = ! pM" style="background-color:#ff7979 ; border-color:#000000">
       Liste des pages</button>
     <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
 
-      <button aria-controls="sousmenuchat" @click="pSC = ! pSC">
+      <button aria-controls="sousmenuchat" @click="pSC = ! pSC" style="background-color:#de8b8b ; border-color:#000000">
         Chats</button>
       <div id="sousmenuchat" x-show="pSC" x-transition.duration.800ms><a href="/cats/index.html"><img
             src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
 
         <dl x-data="{P1:false}">
-          <dt aria-controls="Nav1" @click="P1 = ! P1"><button>Chats noirs</button></dt>
+          <dt aria-controls="Nav1" @click="P1 = ! P1"><button style="background-color:#e4b2fe ; border-color:#000000">Chats noirs</button></dt>
           <dd id="Nav1" x-show="P1" x-transition.duration.800ms>Ce lien amène à la page consacré aux chats noirs :</dd>
           <dd id="Nav1" x-show="P1" x-transition.duration.800ms><a href="/cats/blackcats.html"><img
                 src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></dd>
         </dl>
         <dl x-data="{P2:false}">
-          <dt aria-controls="Nav2" @click="P2 = ! P2"><button>Autres chats</button></dt>
+          <dt aria-controls="Nav2" @click="P2 = ! P2"><button style="background-color:#e4b2fe ; border-color:#000000">Autres chats</button></dt>
           <dd id="Nav2" x-show="P2" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chats :
           </dd>
           <dd id="Nav2" x-show="P2" x-transition.duration.800ms><a href="/cats/colorcats.html"><img
@@ -77,13 +77,13 @@
         </dl>
       </div>
 
-      <button aria-controls="sousmenuchien" @click="pSD = ! pSD">
+      <button aria-controls="sousmenuchien" @click="pSD = ! pSD" style="background-color:#de8b8b ; border-color:#000000">
         Chiens</button>
       <div id="sousmenuchien" x-show="pSD" x-transition.duration.800ms><a href="/dogs/index.html"><img
             src="/public/icones/MaterialSymbolsLink.svg" alt="link"></a>
 
         <dl x-data="{P3:false}">
-          <dt aria-controls="Nav3" @click="P3 = ! P3"><button>Golden retriever</button></dt>
+          <dt aria-controls="Nav3" @click="P3 = ! P3"><button style="background-color:#e4b2fe ; border-color:#000000">Golden retriever</button></dt>
           <dd id="Nav3" x-show="P3" x-transition.duration.800ms>Ce lien amène à la page consacré aux Golden retriever :
           </dd>
           <dd id="Nav3" x-show="P3" x-transition.duration.800ms><a href="/dogs/goldenretriever.html"><img
@@ -91,7 +91,7 @@
         </dl>
         </dl>
         <dl x-data="{P4:false}">
-          <dt aria-controls="Nav4" @click="P4 = ! P4"><button>Autres chiens</button></dt>
+          <dt aria-controls="Nav4" @click="P4 = ! P4"><button style="background-color:#e4b2fe ; border-color:#000000">Autres chiens</button></dt>
           <dd id="Nav4" x-show="P4" x-transition.duration.800ms>Ce lien amène à la page consacré à d'autres chiens :
           </dd>
           <dd id="Nav4" x-show="P4" x-transition.duration.800ms><a href="/dogs/colordogs.html"><img
