--- a/dogs/colordogs.html
+++ b/dogs/colordogs.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn">
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"style="background-color:#ff7979 ; border-color:#000000 ; color:#ffffff">
             Menu
         </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
