Boutons Infos + Menu terminé

--- a/cats/blackcats.html
+++ b/cats/blackcats.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" x-data="{
   menuIsOpen:false,
-  pM:false,
-  pSC:false,
-  pSD:false,
-  P1:false,
-  P2:false,
-  P3:false,
-  P4:false
-
+  pM:false
 
   }" :class="{noscroll:menuIsOpen,}" x-data="{menuIsOpen:false}">
 
@@ -24,25 +17,38 @@
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"style="background-color:#ff7979 ; border-color:#000000 ; color:#ffffff">
-            Menu
-        </button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"
+            style="background-color:#ff7979 ; border-color:#000000"><img src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg"
-                            alt="flèche lien"></a></li>
+                <li><a href="../index.html">Page d'accueil<img
+                            src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../cats/index.html">FELIS CATUS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../cats/colorcats.html">Autres chats<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/index.html">CANIS LUPUS FAMILIARIS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/goldenretriever.html">Golden Retriever<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/colordogs.html">Autres chiens<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
             </ul>
         </nav>
-        <h1>Animaux de compagnie</h1>
     </header>
 </body>
+
+<h1>Les chats noirs</h1>
+<button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+<div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+    <p>
+        La signification de la superstition du chat noir reste assez obscure. Pour autant, il est de coutume de
+        dire,dans la culture contemporaine française, que croiser un chat noir porte malheur. Certaines coutumes y
+        voient quant à elle un porte-bonheur : en effet, les chats blancs auraient tous un unique poil blanc, véritable
+        talisman porteur de chance éternelle à celui qui le détient. Cela étant, la réputation à travers le monde de
+        notre compagnon à quatre pattes est plutôt celle d'un porteur de mauvais présage. Réincarnation du diable pour
+        certains ou de sorciers pour d'autres, peut-on trouver une signification crédible au chat noir qui porte malheur
+        ? Les origines de la superstition sont en fait bien plus lointaines qu'elles n'y paraissent. Source : <a
+            href="https://www.enviedeplus.com/famille/animaux-de-compagnie/superstition-chat-noir" target="_blank">Envie
+            de plus</a>
+    </p>
