--- a/cats/colorcats.html
+++ b/cats/colorcats.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" x-data="{
   menuIsOpen:false,
-  pM:false,
-  pSC:false,
-  pSD:false,
-  P1:false,
-  P2:false,
-  P3:false,
-  P4:false
-
+  pM:false
 
   }" :class="{noscroll:menuIsOpen,}" x-data="{menuIsOpen:false}">
 
@@ -24,25 +17,30 @@
 
 <body>
     <header>
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"style="background-color:#ff7979 ; border-color:#000000 ; color:#ffffff">
-            Menu
-        </button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menuBtn"
+            style="background-color:#ff7979 ; border-color:#000000"><img src="/public/icones/MdiMenu.svg"> </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Page d'accueil<img src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg"
-                            alt="flèche lien"></a></li>
+                <li><a href="../index.html">Page d'accueil<img
+                            src="../public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../cats/index.html">FELIS CATUS<img
                             src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../cats/blackcats.html">Chats noirs<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/index.html">CANIS LUPUS FAMILIARIS<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/goldenretriever.html">Golden Retriever<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
                 <li><a href="../dogs/colordogs.html">Autres chiens<img
-                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></a></li>
+                            src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
             </ul>
         </nav>
-        <h1>Chats noirs</h1>
     </header>
 </body>
+
+<h1>Les autres chats</h1>
+<button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+<div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+    <p>
+        . Source : <a href="https://fr.wikipedia.org/wiki/Chat" target="_blank">Wikipédia</a>
+    </p>
