--- a/cats/blackcats.html
+++ b/cats/blackcats.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr" x-data="{
   menuIsOpen:false,
-  pM:false
+  pM:false,
+  HP:false
 
   }" :class="{noscroll:menuIsOpen,}" x-data="{menuIsOpen:false}">
 
@@ -35,20 +36,33 @@
                             src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
             </ul>
         </nav>
+        <aside>
+            <button aria-controls="Homepage" @click="HP = !HP">
+                <a href="../index.html">
+                    <img src="/public/icones/MdiHome.svg" alt="accueil">
+                </a>
+            </button>
+        </aside>
     </header>
-</body>
 
-<h1>Les chats noirs</h1>
-<button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-<div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-    <p>
-        La signification de la superstition du chat noir reste assez obscure. Pour autant, il est de coutume de
-        dire,dans la culture contemporaine française, que croiser un chat noir porte malheur. Certaines coutumes y
-        voient quant à elle un porte-bonheur : en effet, les chats blancs auraient tous un unique poil blanc, véritable
-        talisman porteur de chance éternelle à celui qui le détient. Cela étant, la réputation à travers le monde de
-        notre compagnon à quatre pattes est plutôt celle d'un porteur de mauvais présage. Réincarnation du diable pour
-        certains ou de sorciers pour d'autres, peut-on trouver une signification crédible au chat noir qui porte malheur
-        ? Les origines de la superstition sont en fait bien plus lointaines qu'elles n'y paraissent. Source : <a
-            href="https://www.enviedeplus.com/famille/animaux-de-compagnie/superstition-chat-noir" target="_blank">Envie
-            de plus</a>
-    </p>
+
+    <h1>Les chats noirs</h1>
+    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+        <p>
+            La signification de la superstition du chat noir reste assez obscure. Pour autant, il est de coutume de
+            dire,dans la culture contemporaine française, que croiser un chat noir porte malheur. Certaines coutumes y
+            voient quant à elle un porte-bonheur : en effet, les chats blancs auraient tous un unique poil blanc,
+            véritable
+            talisman porteur de chance éternelle à celui qui le détient. Cela étant, la réputation à travers le monde de
+            notre compagnon à quatre pattes est plutôt celle d'un porteur de mauvais présage. Réincarnation du diable
+            pour
+            certains ou de sorciers pour d'autres, peut-on trouver une signification crédible au chat noir qui porte
+            malheur
+            ? Les origines de la superstition sont en fait bien plus lointaines qu'elles n'y paraissent. Source : <a
+                href="https://www.enviedeplus.com/famille/animaux-de-compagnie/superstition-chat-noir"
+                class="nounderline" target="_blank">Envie
+                de plus</a>
+        </p>
+
+</body>
