--- a/cats/index.html
+++ b/cats/index.html
@@ -37,15 +37,25 @@
                             src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
             </ul>
         </nav>
+        <aside>
+            <button aria-controls="Homepage" @click="HP = !HP">
+                <a href="../index.html">
+                    <img src="/public/icones/MdiHome.svg" alt="accueil">
+                </a>
+            </button>
+        </aside>
     </header>
-</body>
 
-<h1>Les chats (FELIS CATUS)</h1>
-<button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-<div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-    <p>
-        Le Chat domestique (Felis catus) est une espèce de mammifères carnivores, de la famille des Félidés. Issu de la
-        domestication du chat sauvage Felis silvestris, il était anciennement considéré comme une sous-espèce de
-        celui-ci, sous la dénomination Felis silvestris catus. Source : <a href="https://fr.wikipedia.org/wiki/Chat"
-            target="_blank">Wikipédia</a>
-    </p>
+
+    <h1>Les chats (FELIS CATUS)</h1>
+    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+        <p>
+            Le Chat domestique (Felis catus) est une espèce de mammifères carnivores, de la famille des Félidés. Issu de
+            la
+            domestication du chat sauvage Felis silvestris, il était anciennement considéré comme une sous-espèce de
+            celui-ci, sous la dénomination Felis silvestris catus. Source : <a href="https://fr.wikipedia.org/wiki/Chat"
+               class="nounderline" target="_blank">Wikipédia</a>
+        </p>
+
+</body>
