--- a/dogs/index.html
+++ b/dogs/index.html
@@ -35,15 +35,27 @@
                             src="/public/icones/MaterialSymbolsArrowRightAltRounded.svg" alt="flèche lien"></a></li>
             </ul>
         </nav>
+        <aside>
+            <button aria-controls="Homepage" @click="HP = !HP">
+                <a href="../index.html">
+                    <img src="/public/icones/MdiHome.svg" alt="accueil">
+                </a>
+            </button>
+        </aside>
     </header>
-</body>
 
-<h1>Les chiens (CANIS LUPUS FAMILIARIS)</h1>
-<button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
-<div id="petitmenu" x-show="pM" x-transition.duration.800ms>
-    <p>
-        Le Chien (Canis lupus familiaris) est la sous-espèce domestique de Canis lupus (Loup gris), un mammifère de la
-        famille
-        des Canidés (Canidae), laquelle comprend également le dingo, chien domestique retourné à l'état sauvage. Source
-        : <a href="https://fr.wikipedia.org/wiki/Chien" target="_blank">Wikipédia</a>
-    </p>
+
+
+    <h1>Les chiens (CANIS LUPUS FAMILIARIS)</h1>
+    <button aria-controls="infos" @click="pM = ! pM">Infos ?</button>
+    <div id="petitmenu" x-show="pM" x-transition.duration.800ms>
+        <p>
+            Le Chien (Canis lupus familiaris) est la sous-espèce domestique de Canis lupus (Loup gris), un mammifère de
+            la
+            famille
+            des Canidés (Canidae), laquelle comprend également le dingo, chien domestique retourné à l'état sauvage.
+            Source
+            : <a href="https://fr.wikipedia.org/wiki/Chien" class="nounderline" target="_blank">Wikipédia</a>
+        </p>
+
+</body>
